<resources>
    <string name="app_name">网络小说阅读器</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">书库</string>
    <string name="title_search">搜索</string>
    <string name="title_notifications">书架</string>
    <string name="choose_type">请选择小说类型</string>
    <string name="search_history_title">搜索历史</string>
    <string name="end_book_type">完结</string>
    <string name="read_button_text">开始阅读</string>
    <string name="add_button_text">加入书架</string>
    <string name="catalogue_title">章节目录</string>
    <string name="content_loading">内容加载中…</string>
    <string name="last_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="try_another_batch">没有心仪的书籍？ 换一批试试</string>
    <string name="catalogue">目录</string>
    <string name="night_mode">夜间模式</string>
    <string name="more_setting">更多设置</string>
    <string name="set_text_size">设置文字大小</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="no_data">No Data</string>
    <string name="empty_tip">空空如也</string>
</resources>