<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/set_text_size" />

        <com.example.networkbookreader.component.EditTextWithBt
            android:id="@+id/ed_bt"
            android:layout_width="180dp"
            android:layout_height="30dp"
            app:btHeight="30dp"
            app:btSpec="10dp"
            app:btWidth="30dp"
            app:defaultValue="1"
            app:ladderValue="1"
            app:leftText="-"
            app:maxValue="30"
            app:miniValue="11"
            app:rightText="+" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/dialog_cancel"
            android:textColor="#08A8FF"
            android:textSize="16sp" />

        <View
            android:id="@+id/dialog_line"
            android:layout_width="1px"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/dialog_confirm"
            android:textColor="#08A8FF"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>