<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry"
            android:layout_alignParentTop="true"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/choose_type"
                android:singleLine="true"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_book_type" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="35dp"
            android:paddingBottom="5dp"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/linearLayout"
            android:layout_above="@+id/refresh"
            >
            <ListView
                android:id="@+id/book_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="@null"
                android:dividerHeight="10dp"
                android:fadingEdge="none"
                android:fastScrollEnabled="true"

                android:scrollbarStyle="insideInset"
                android:scrollingCache="false"
                android:transcriptMode="alwaysScroll"
                />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:srcCompat="@drawable/ic_refresh_purple" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/try_another_batch"
            android:textColor="#b4a0ff" />
    </LinearLayout>
    </RelativeLayout>
